# HSWM

./: .gitignore  ABSORB_CONTRACT_v1.md  AMENDMENT_OPEN_HSWM_KERNEL_V2_2026-07-22.md  B1_IDENTITY_UNLOCK_RESULTS_2026-07-22.md  B2_ROUTING_SIGNAL_RESULTS_2026-07-23.md  CANON_DIRECTION_NEURAL_COGNITIVE_ENTITY_2026-07-23.md  CERT_TRAVERSAL_RESULTS_2026-07-19.md  CLI_PROVIDER_MODULE_DECISION_2026-07-20.json  CLI_PROVIDER_TRANSPORT.md  DESIGN_PHASE_B_FEDERATED_HSWM_2026-07-22.md  E1_CONDITIONAL_TRAVERSAL_RESULTS_2026-07-23.md  EFFICACY.md  EPWC_IMPLEMENTATION_S0_S2_2026-07-20.md  EPWC_IMPLEMENTATION_S3_2026-07-20.md  EVIDENCE_B1_IDENTITY_UNLOCK_2026-07-22.json  EVIDENCE_B2_ROUTING_SIGNAL_2026-07-23.json  EVIDENCE_E1_CONDITIONAL_TRAVERSAL_2026-07-23.json  EVIDENCE_P1_CLOSED_LEARNING_LOOP_2026-07-23.json  EVIDENCE_R1_T1_RETRY_2026-07-22.json  EVIDENCE_R2_ML_WALK_2026-07-22.json  EVIDENCE_T1_ENTRANCE_REACH_2026-07-22.json  EVIDENCE_T3_SCORE_NULL_2026-07-23.json  EXPB_LONGDOC_RESULTS_2026-07-19.md  GENERIC_FEEDBACK_RUNTIME_ACCEPTANCE.md  H3_B3_COMPOSITION_PREREG_2026-07-20.md  H3_B3_RESUME_STATUS_2026-07-20.md  H3_B3_RUN_MANIFEST_2026-07-20.json  H3_B3_RUN_MANIFEST_V2_2026-07-20.json  H3_B3_RUN_MANIFEST_V3_2026-07-20.json  H3_B3_RUN_MANIFEST_V4_2026-07-20.json  H3_B3_RUN_MANIFEST_V5_2026-07-20.json  H3_B3_V3_REFUSAL_2026-07-20.md  H3_B3_V4_PREOUTPUT_REFUSAL_2026-07-20.md  H3_B3_V4_RESTART_PREREG_2026-07-20.md  H3_B3_V5_DEVELOPMENT_REFUSAL_2026-07-20.md  H3_B3_V5_RESTART_PREREG_2026-07-20.md  H3_C0_CHAIN_VIABILITY_DIAGNOSIS_2026-07-20.md  HSWM_CANONICAL_RESEARCH_DIRECTION_20260724.md  HSWM_LLM_FUNCTION_NETWORK_ARCHITECTURE_AND_FEASIBILITY_2026-07-23.md  HSWM_NEXT_RESEARCH_HARNESS_AND_FEEDBACK_2026-07-24.md  (+180 more)
prom_search_hswm/: INDEX.md  README.md  b2_oracle_headroom.py  convert_sirerag_2wiki.py  diag_b22_weight_action_space.py  hswm_absorption_fsm.py  hswm_b22_gate0_harness.py  hswm_bond_readout.py  hswm_call_receipt.py  hswm_field_algebra.py  hswm_function_network.py  hswm_function_registry.py  hswm_fusion.py  hswm_hypergraph.py  hswm_hypergraph_readout.py  hswm_open_composition.py  hswm_open_kernel.py  hswm_shadow_gate.py  hswm_typed_ports.py  prom9_causal_harness.py  prom9_prepare_2wiki_f1.py  prom9_protocol.py  prom9_semantic_neural_network.v1.json  prom_b21_learned_router.py  prom_b2_crossfield_merge.py  prom_binding_common.py  prom_consensus_bench.py  prom_consensus_multilayer.py  prom_consensus_real.py  prom_f1_function_network.py  prom_fieldoffields.py  prom_legend_recall.py  prom_multilayer_ab.py  prom_multilayer_profile.py  prom_p1_binding_density.py  prom_p4_equalcompute_ab.py  prom_p5_multiview_hardhop.py  prom_p6_continual_absorption_fsm.py  prom_realfields_ab.py  prom_shadow_gated_absorption.py  (+30 more)
receipts/: HSWM_NEXT_GATE_LAKATOTREE_PACKET_20260724.json  HSWM_NEXT_GATE_STATUS_20260724.json  HSWM_ORDERED_GATE_LAKATOTREE_PACKET_20260724.json  HSWM_ORDERED_GATE_STATUS_20260724.json  p1v2_l0_budget_manifest_seed2_20260724.json  p1v2_l0_budget_manifest_seed2_r2_20260724.json  p1v2_l0_budget_manifest_seed2_r3_512_20260724.json  p1v2_l0_contradiction_refusal_20260724.json  p1v2_l0_diagnosis_r2_512_20260724.json  p1v2_l0_injected_negative_judge_receipt_20260724.json  p1v2_l0_judge_fixture_manifest_20260724.json  p1v2_l0_judge_r2_512_20260724.json  p1v2_l0_lakatotree_prediction_20260724.json  p1v2_l0_lakatotree_prediction_512_r2_20260724.json  p1v2_l0_measurement_r1_procedural_abort_20260724.json  p1v2_l0_measurement_r2_512_evidence_20260724.json  p1v2_l0_positive_judge_receipt_20260724.json  p1v2_l0_public_manifest_seed2_20260724.json  p1v2_l0_r2_512_closeout_20260724.json  p1v2_l0_refreeze_512_20260724.json  p1v2_phantom_generation_seed2_20260724.json  p1v2_qwen35_deployment_20260724.json  p1v2_typed_lesson_injected_negative_20260724.json  p1v2_typed_lesson_ooptdd_receipt_20260724.json  p1v2_typed_lesson_positive_initial_20260724.json  p1v3_phantom_generation_seed3_20260724.json  p1v3_policy_actuation_injected_ceiling_20260724.json  p1v3_policy_actuation_ooptdd_receipt_20260724.json  p1v3_policy_actuation_positive_20260724.json  p1v3_policy_calibration_budget_seed3_20260724.json  p1v3_policy_calibration_evidence_seed3_20260724.json  p1v3_policy_heldout_budget_seed3_20260724.json  p1v3_policy_heldout_evidence_seed3_20260724.json  p1v3_policy_heldout_judge_seed3_20260724.json  p1v3_policy_prediction_receipt_seed3_20260724.json  p1v3_policy_public_manifest_seed3_20260724.json  p1v3_policy_sidecar_separation_seed3_20260724.json  p1v4_phantom_generation_seed4_eligibility_abort_20260724.json  p1v4_phantom_generation_seed5_r2_20260724.json  p1v4_policy_calibration_budget_seed5_r2_20260724.json  (+12 more)
tests/: test_additive_floor.py  test_bge_m3_embed.py  test_certified_cut_compare.py  test_certified_readout.py  test_chain_viability.py  test_claim_builder.py  test_claim_weave.py  test_claim_weave_ml.py  test_cli_provider_transport.py  test_composition.py  test_doc_builder.py  test_entity_binding.py  test_expB_longdoc.py  test_falsifier_teeth.py  test_feedback_runtime.py  test_feedback_store.py  test_field_snapshot.py  test_h3_arc_adjudicator.py  test_h3_artifact_lifecycle.py  test_h3_b3_end_to_end.py  test_h3_b3_falsifier.py  test_h3_b3_harness_gates.py  test_h3_b3_manifest.py  test_h3_b3_preflight.py  test_h3_b3_prepare.py  test_h3_fresh_manifest.py  test_h3_title_anchor_falsifier.py  (+55 more)
(+176 files in other folders)
