[project]
name = "hswm"
version = "0.1.0"
description = "HSWM — evidence-preserving world compiler and falsifiable hypergraph field/readout research substrate."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
kg = ["neo4j>=5.20"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
  "synth",
  "hypergraph",
  "weight_field",
  "readouts",
  "learned",
  "metrics",
  "falsifier",
  "neo4j_loader",
  "real_run",
  "learned_v2",
  "diagnose",
  "llm_judgment_loop",
  "learned_v3_additive",
  "doc_builder",
  "world_builder",
  "world_ir",
  "world_compiler",
  "legacy_adapter",
  "field_snapshot",
  "certified_readout",
  "certified_cut_compare",
  "traversal",
  "traversal_cert",
  "stale_poisoning",
  "stats_protocol",
  "ab_p5_full",
  "recorded_llm_extractor",
  "h3_fresh_manifest",
  "title_anchor_builder",
  "relation_eval",
  "composition",
  "claim_builder",
  "typed_composition",
  "h3_b3_prepare",
  "bge_m3_embed",
  "model_deployment_receipt",
  "h3_b3_falsifier",
  "h3_b3_preflight",
  "h3_arc_adjudicator",
  "h3_artifact_lifecycle",
  "h3_b3_manifest",
  "h3_title_anchor_falsifier",
  "cli_provider_transport",
  "qkv_routing",
  "qkv_routing_falsifier",
  "qkv_b1_probe",
  "qkv_b1_development_falsifier",
  "semantic_layer_routing",
  "semantic_layer_falsifier",
  "semantic_2wiki_oracle",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]
