[project]
name = "hswm"
version = "0.1.0"
description = "HSWM — evidence-preserving world compiler and falsifiable hypergraph field/readout research substrate."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
kg = ["neo4j>=5.20"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
  "synth",
  "hypergraph",
  "weight_field",
  "readouts",
  "learned",
  "metrics",
  "falsifier",
  "neo4j_loader",
  "real_run",
  "learned_v2",
  "diagnose",
  "llm_judgment_loop",
  "learned_v3_additive",
  "doc_builder",
  "world_builder",
  "world_ir",
  "world_compiler",
  "legacy_adapter",
  "field_snapshot",
  "certified_readout",
  "certified_cut_compare",
  "traversal",
  "traversal_cert",
  "stale_poisoning",
  "stats_protocol",
  "ab_p5_full",
  "recorded_llm_extractor",
  "h3_fresh_manifest",
  "title_anchor_builder",
  "relation_eval",
  "composition",
  "claim_builder",
  "typed_composition",
  "h3_b3_prepare",
  "bge_m3_embed",
  "model_deployment_receipt",
  "h3_b3_falsifier",
  "h3_b3_preflight",
  "h3_arc_adjudicator",
  "h3_artifact_lifecycle",
  "h3_b3_manifest",
  "h3_title_anchor_falsifier",
  "cli_provider_transport",
  "qkv_routing",
  "qkv_routing_falsifier",
  "qkv_b1_probe",
  "qkv_b1_development_falsifier",
  "semantic_layer_routing",
  "semantic_layer_falsifier",
  "semantic_2wiki_oracle",
  "hswm_weight_snapshot",
  "hswm_weight_store",
  "p1_eligibility_tag",
  "p1_weighted_walk",
  "p1_m_commit",
  "p1_loop_harness",
  "p1_llm_answerer",
  "p1_phantom_environment",
  "p1_rank_invariance_diagnostic",
  "p1v2_typed_lesson",
  "p1v2_prompt_parity",
  "p1v2_tokenizer_adapter",
  "p1v2_l0_harness",
  "p1v2_llm_answerer",
  "p1v2_l0_prepare",
  "p1v2_type6_environment",
  "p1v2_l0_preflight",
  "p1v2_l0_measure",
  "p1v2_l0_judge",
  "p1v2_l0_judge_fixtures",
  "p1v2_l0_refreeze",
  "p1v2_l0_diagnose",
  "p1v2_ooptdd_receipt",
  "p1v3_policy_environment",
  "p1v3_calibration_gate",
  "p1v3_calibration_preflight",
  "p1v3_calibration_measure",
  "p1v3_heldout_preflight",
  "p1v3_heldout_measure",
  "p1v3_heldout_judge",
  "p1v3_ooptdd_receipt",
  "p1v3_prepare",
]

[tool.pytest.ini_options]
testpaths = ["tests", "prom_search_hswm", "_research/shared_field_hypothesis"]
python_files = "test_*.py"
pythonpath = ["."]
